fixed layout bug

--- a/app/webroot/css/basic.css
+++ b/app/webroot/css/basic.css
@@ -117,7 +117,7 @@
 
 .ttc-actions {
     float: right;
-    padding: 3px;
+    padding-left: 3px;
     margin: 0;
     width: 600px;
 }   
@@ -180,6 +180,12 @@
 
 .ttc-filter {
 	text-align: right;
+	width: 100%;
+}
+
+.ttc-filter form {
+	float: right;
+	margin-right: 2px;
 }
 
 .ttc-program-header {
@@ -381,7 +387,7 @@
 }
 
 .ttc-display-area {
-    height: 450px;
+    height: 355px;
     overflow-y:auto;
-    width: 930px;
+    width: 99.7%;
 }
