--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -60,8 +60,8 @@ h3 {
 	color: #2c6877;
 	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
 	font-size: 165%;
-	float: left;
-	/*width: 300px;*/
+	/*float: left;
+	width: 300px;*/
 }
 h4 {
 	color: #993;
@@ -124,7 +124,7 @@ div.view {
 	width:76%;
 	/*border-left:1px solid #666;*/
 	padding:10px 2%;
-	height: 600px;
+	height: 430px;
 }
 div.actions {
 	float:left;
